<resources>
    <string name="app_name">尚选</string>
    <string name="main_custom_view">自定义View</string>
    <string name="custom_text">自定义TextView</string>
    <string name="custom_image">自定义ImageView</string>
    <string name="custom_move_view">拖动我</string>
    <string name="custom_short_string">我是短句</string>
    <string name="custom_long_string">我是一个长句</string>
    <string name="custom_bold_string">我是一个自定义加粗句子</string>
    <string name="viewpager">ViewPager</string>
    <string name="customize">Customize</string>
    <string name="webView">WebView</string>
    <string name="getUser">getUser</string>
    <string name="btnTest">一键登录</string>
    <string name="btnConstraintLayout">btnConstraintLayout</string>
    <string name="hello">hello</string>
</resources>