<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <Button
        android:id="@+id/btnViewPager"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/black"
        android:text="@string/viewpager"
        android:background="@color/teal_200"/>

    <Button
        android:id="@+id/btnCustomize"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/black"
        android:text="@string/customize"
        android:background="@color/teal_200"/>
    <Button
        android:id="@+id/btnWebView"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/black"
        android:text="@string/webView"
        android:background="@color/teal_200"/>
    <Button
        android:id="@+id/btnUser"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/black"
        android:text="@string/getUser"
        android:background="@color/teal_200"/>
    <Button
        android:id="@+id/btnTest"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/black"
        android:text="@string/btnTest"
        android:background="@color/teal_200"/>
    <Button
        android:id="@+id/btnConstraintLayout"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/black"
        android:text="@string/btnConstraintLayout"
        android:background="@color/teal_200"/>
</LinearLayout>